Reser Увеличил количество вводимых значений зависимости расхода от времени

--- a/Reser/Reser.csproj
+++ b/Reser/Reser.csproj
@@ -66,7 +66,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Reser.Program</StartupObject>
@@ -287,9 +287,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <AdditionalFiles Include="Reser_help.chm">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </AdditionalFiles>
     <None Include="Reser_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
