--- a/Reser/Reser.csproj
+++ b/Reser/Reser.csproj
@@ -306,6 +306,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <EmbeddedResource Include="Resources\Reser_help.pdf" />
     <None Include="Resources\Sheme.png" />
     <None Include="Resources\Help.png" />
     <None Include="Resources\SaveResults.png" />
