ResUst Добавил файл справки, его временное открытие и удаление при выходе из программы.

--- a/ResUst/ResUst.csproj
+++ b/ResUst/ResUst.csproj
@@ -61,7 +61,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>iconU.ico</ApplicationIcon>
@@ -277,6 +277,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\ResUst_help.pdf" />
     <None Include="ResUst_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
